<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="#d3d3d3">

    <!--Header Bar-->
    <LinearLayout
        android:contentDescription="@string/header_descript"
        android:id="@+id/header"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation = "horizontal"
        android:background="#69c2e5"
        android:gravity="center"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/enter"
            android:textSize="30sp"/>
    </LinearLayout>

    <Space android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <!--PASSCODE DISPLAY-->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_gravity="center" />

    <Space android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <!--PASSCODE ENTRY-->
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/numericPad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        android:layout_weight="2">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button
                android:id="@+id/button1"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/one"
                android:textSize="25sp"
                android:textColor="#000000"
                android:padding="6dip"
                android:layout_margin="3dip"
                android:background="#69c2e5">
            </Button>
            <Button
                android:id="@+id/button2"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/two"
                android:textSize="25sp"
                android:textColor="#000000"
                android:padding="6dip"
                android:layout_margin="3dip"
                android:background="#69c2e5">
            </Button>
            <Button
                android:id="@+id/button3"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/three"
                android:textSize="25sp"
                android:textColor="#000000"
                android:padding="6dip"
                android:layout_margin="3dip"
                android:background="#69c2e5">
            </Button>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button
                android:id="@+id/button4"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/four"
                android:textSize="25sp"
                android:textColor="#000000"
                android:padding="6dip"
                android:layout_margin="3dip"
                android:background="#69c2e5">
            </Button>
            <Button
                android:id="@+id/button5"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/five"
                android:textSize="25sp"
                android:textColor="#000000"
                android:padding="6dip"
                android:layout_margin="3dip"
                android:background="#69c2e5">
            </Button>
            <Button
                android:id="@+id/button6"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/six"
                android:textSize="25sp"
                android:textColor="#000000"
                android:padding="6dip"
                android:layout_margin="3dip"
                android:background="#69c2e5">
            </Button>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button
                android:id="@+id/button7"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/seven"
                android:textSize="25sp"
                android:textColor="#000000"
                android:padding="6dip"
                android:layout_margin="3dip"
                android:background="#69c2e5">
            </Button>
            <Button
                android:id="@+id/button8"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/eight"
                android:textSize="25sp"
                android:textColor="#000000"
                android:padding="6dip"
                android:layout_margin="3dip"
                android:background="#69c2e5"
                >
            </Button>
            <Button
                android:id="@+id/button9"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/nine"
                android:textSize="25sp"
                android:textColor="#000000"
                android:padding="6dip"
                android:layout_margin="3dip"
                android:background="#69c2e5">
            </Button>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button
                android:id="@+id/buttonExit"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/exit"
                android:textSize="25sp"
                android:textColor="#000000"
                android:padding="6dip"
                android:layout_margin="3dip"
                android:background="#69c2e5">
            </Button>
            <Button
                android:id="@+id/button0"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="0"
                android:textSize="25sp"
                android:textColor="#000000"
                android:padding="6dip"
                android:layout_margin="3dip"
                android:background="#69c2e5">
            </Button>
            <Button
                android:id="@+id/buttonDelete"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/delete"
                android:textSize="25sp"
                android:textColor="#000000"
                android:padding="6dip"
                android:layout_margin="3dip"
                android:background="#69c2e5">
            </Button>
        </TableRow>
    </TableLayout>


</LinearLayout>